net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkInterfaceTests/NetworkInterfaceNetworkSecurityGroupTest[2018-11-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-b0dabe467de4b0d61fd06e74cd4d7f3e-8dded6d2548060bf-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a0d367ca14af9dde834c652f090287c8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "db87fd3c-5f69-4b13-be0c-14b4b90a5647",
        "x-ms-ratelimit-remaining-subscription-reads": "11354",
        "x-ms-request-id": "db87fd3c-5f69-4b13-be0c-14b4b90a5647",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151925Z:db87fd3c-5f69-4b13-be0c-14b4b90a5647"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg9007?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-2079e947e9d9a28cc65f035cb0c38095-cfa5fee08e791894-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4dd4208a5aab71deaa603585f84a15be",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "86c36517-5920-400f-b336-92a4e357223e",
        "x-ms-ratelimit-remaining-subscription-writes": "1033",
        "x-ms-request-id": "86c36517-5920-400f-b336-92a4e357223e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151926Z:86c36517-5920-400f-b336-92a4e357223e"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007",
        "name": "csmrg9007",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "220",
        "Content-Type": "application/json",
        "traceparent": "00-05252fae8df8e6cfb44927db14ca50c7-235cded1e8e7331d-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "df4aaaaa1bf75502aa49179a2ed98b54",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/228d2544-9b03-4963-a194-c02ed08f6458?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1019",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:28 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "03f52254-0cf8-43d4-b6cb-f088c0ba4001",
        "x-ms-client-request-id": "df4aaaaa1bf75502aa49179a2ed98b54",
        "x-ms-correlation-request-id": "e74a69f0-2b71-4fcc-9e9c-66dc5e2ef4b0",
        "x-ms-ratelimit-remaining-subscription-writes": "1032",
        "x-ms-request-id": "228d2544-9b03-4963-a194-c02ed08f6458",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151929Z:e74a69f0-2b71-4fcc-9e9c-66dc5e2ef4b0"
      },
      "ResponseBody": {
        "name": "azsmnet1562",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562",
        "etag": "W/\"41b73c36-95ef-4008-ae83-2e0e387bb3e5\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "50e1dd83-91b1-4fae-b078-8b725a2115bf",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet5786",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562/subnets/azsmnet5786",
              "etag": "W/\"41b73c36-95ef-4008-ae83-2e0e387bb3e5\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/228d2544-9b03-4963-a194-c02ed08f6458?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-05252fae8df8e6cfb44927db14ca50c7-6e9a89dc98244db8-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "df9600abf4d68f555788c661489b571f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:28 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "16ca79d9-e023-4394-a27f-6a0754077010",
        "x-ms-client-request-id": "df9600abf4d68f555788c661489b571f",
        "x-ms-correlation-request-id": "4647a250-29ab-4cf6-96c3-b33502c0edb5",
        "x-ms-ratelimit-remaining-subscription-reads": "11353",
        "x-ms-request-id": "dd4f459d-2381-4cd8-a151-36a92f28ff3d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151929Z:4647a250-29ab-4cf6-96c3-b33502c0edb5"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/228d2544-9b03-4963-a194-c02ed08f6458?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-05252fae8df8e6cfb44927db14ca50c7-c6fb61c5db97f2f0-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "27ffc1bfcf4e7ad3a59636e090000538",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:39 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c87abede-8807-44ea-ac5a-2df69b0fcecd",
        "x-ms-client-request-id": "27ffc1bfcf4e7ad3a59636e090000538",
        "x-ms-correlation-request-id": "2c158fe9-70be-452a-ae03-f5e7d5a7ba81",
        "x-ms-ratelimit-remaining-subscription-reads": "11352",
        "x-ms-request-id": "7f357a47-ed13-4738-a1d0-adc1f1d035aa",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151939Z:2c158fe9-70be-452a-ae03-f5e7d5a7ba81"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-05252fae8df8e6cfb44927db14ca50c7-2e2375f68fc2958d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2dee8260ab42c97da38fb46c69a36b0d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1021",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:39 GMT",
        "ETag": "W/\"1dcc52ee-09ae-494c-be00-51b040cab6b3\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f916478b-7ae1-4df8-9dd7-d4284d734078",
        "x-ms-client-request-id": "2dee8260ab42c97da38fb46c69a36b0d",
        "x-ms-correlation-request-id": "4575120a-9ce0-46cb-a9bf-52005ed9eb8a",
        "x-ms-ratelimit-remaining-subscription-reads": "11351",
        "x-ms-request-id": "dd125cfa-f7b2-42d2-9cc1-58ad4f242c7e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151940Z:4575120a-9ce0-46cb-a9bf-52005ed9eb8a"
      },
      "ResponseBody": {
        "name": "azsmnet1562",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562",
        "etag": "W/\"1dcc52ee-09ae-494c-be00-51b040cab6b3\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "50e1dd83-91b1-4fae-b078-8b725a2115bf",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet5786",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562/subnets/azsmnet5786",
              "etag": "W/\"1dcc52ee-09ae-494c-be00-51b040cab6b3\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "313",
        "Content-Type": "application/json",
        "traceparent": "00-5f7018f2e6e35dfd9002abf9abef8f9b-2990bca99d1d14e6-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8f426bbfc172dc462d1b393fbe75ff57",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/2515d095-ac80-4aec-a2c6-c253b09f2fb0?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "5555",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:42 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6524cdea-4621-4225-8dd0-4fbeea13ade9",
        "x-ms-client-request-id": "8f426bbfc172dc462d1b393fbe75ff57",
        "x-ms-correlation-request-id": "716395ae-00e3-4833-a14b-861c9cdbf7c2",
        "x-ms-ratelimit-remaining-subscription-writes": "1031",
        "x-ms-request-id": "2515d095-ac80-4aec-a2c6-c253b09f2fb0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151942Z:716395ae-00e3-4833-a14b-861c9cdbf7c2"
      },
      "ResponseBody": {
        "name": "azsmnet5090",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090",
        "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "1273c841-48b5-4243-90e5-6462f0bbdb0c",
          "securityRules": [
            {
              "name": "azsmnet1691",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/securityRules/azsmnet1691",
              "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"455d6c6d-69c8-493e-b39f-a53b37aa4623\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/2515d095-ac80-4aec-a2c6-c253b09f2fb0?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-5f7018f2e6e35dfd9002abf9abef8f9b-3460e3055a00475c-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2520282b76bd9ec63c120026713d0b2d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:42 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7ad5a405-a642-4e1c-b268-7063e40d6c0a",
        "x-ms-client-request-id": "2520282b76bd9ec63c120026713d0b2d",
        "x-ms-correlation-request-id": "6ab8a252-a36f-40f3-b8b4-5b1c7eae41ed",
        "x-ms-ratelimit-remaining-subscription-reads": "11350",
        "x-ms-request-id": "5dbef7c2-2af8-4555-b3b7-c35c1a2e4880",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151943Z:6ab8a252-a36f-40f3-b8b4-5b1c7eae41ed"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-5f7018f2e6e35dfd9002abf9abef8f9b-2a9d2519277a81d7-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "dbe95d8fa5a296618e2f4b3c3d86c2c6",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5563",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:42 GMT",
        "ETag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3971fa4d-149d-4822-b355-227ea3ea1337",
        "x-ms-client-request-id": "dbe95d8fa5a296618e2f4b3c3d86c2c6",
        "x-ms-correlation-request-id": "76fa0df0-1b4e-428c-8f32-fc79bd8179ef",
        "x-ms-ratelimit-remaining-subscription-reads": "11349",
        "x-ms-request-id": "4370cc2d-9d30-4999-8987-f6954bb9ace4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151943Z:76fa0df0-1b4e-428c-8f32-fc79bd8179ef"
      },
      "ResponseBody": {
        "name": "azsmnet5090",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090",
        "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "1273c841-48b5-4243-90e5-6462f0bbdb0c",
          "securityRules": [
            {
              "name": "azsmnet1691",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/securityRules/azsmnet1691",
              "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"8e2b7064-f061-4718-ae0b-5f0788db587c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "1169",
        "Content-Type": "application/json",
        "traceparent": "00-efa41ea8a7d632c009214de4db314104-83308f854bfc3d47-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "da5495140c9962c6899a29b5a1062a56",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "tags": {
          "key": "value"
        },
        "properties": {
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090",
            "location": "westus"
          },
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562/subnets/azsmnet5786"
                }
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/f6d3ee0b-93a5-467d-bdb7-be271a6362ce?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1794",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5a53c574-a6ec-4e13-8872-768fda88e111",
        "x-ms-client-request-id": "da5495140c9962c6899a29b5a1062a56",
        "x-ms-correlation-request-id": "a28f111a-87ea-47ec-b1b3-16b63f99e1db",
        "x-ms-ratelimit-remaining-subscription-writes": "1030",
        "x-ms-request-id": "f6d3ee0b-93a5-467d-bdb7-be271a6362ce",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151946Z:a28f111a-87ea-47ec-b1b3-16b63f99e1db"
      },
      "ResponseBody": {
        "name": "azsmnet4717",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717",
        "etag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4f09682a-6114-4521-9268-253ec496c1d7",
          "ipConfigurations": [
            {
              "name": "azsmnet2660",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717/ipConfigurations/azsmnet2660",
              "etag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562/subnets/azsmnet5786"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "qpo4cufrsgxe5mdyrnzfuiivxh.dx.internal.cloudapp.net"
          },
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090"
          },
          "hostedWorkloads": [],
          "tapConfigurations": []
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/f6d3ee0b-93a5-467d-bdb7-be271a6362ce?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-efa41ea8a7d632c009214de4db314104-d500756a88b7b743-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7529391cb5d9ddc4143f1bc76cd98d45",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:46 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "45e9f82c-d51c-47f6-b6d4-fbc60053b05d",
        "x-ms-client-request-id": "7529391cb5d9ddc4143f1bc76cd98d45",
        "x-ms-correlation-request-id": "09b70da1-c993-4596-bb9a-4b57dfb4bb51",
        "x-ms-ratelimit-remaining-subscription-reads": "11348",
        "x-ms-request-id": "4b2511cd-be0b-4f6e-8f11-3c87658dcdcf",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151946Z:09b70da1-c993-4596-bb9a-4b57dfb4bb51"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-efa41ea8a7d632c009214de4db314104-09d7daf7c66d0c2d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0556e611d4498ed9ceca440ae13c02d3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1794",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:46 GMT",
        "ETag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4a21efe9-23d7-4464-9e25-8e3b407d32dd",
        "x-ms-client-request-id": "0556e611d4498ed9ceca440ae13c02d3",
        "x-ms-correlation-request-id": "272c1de5-492d-416d-b786-ba6a83a46246",
        "x-ms-ratelimit-remaining-subscription-reads": "11347",
        "x-ms-request-id": "07bad99c-62d3-4fbe-b5c1-280c74deff85",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151947Z:272c1de5-492d-416d-b786-ba6a83a46246"
      },
      "ResponseBody": {
        "name": "azsmnet4717",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717",
        "etag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4f09682a-6114-4521-9268-253ec496c1d7",
          "ipConfigurations": [
            {
              "name": "azsmnet2660",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717/ipConfigurations/azsmnet2660",
              "etag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562/subnets/azsmnet5786"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "qpo4cufrsgxe5mdyrnzfuiivxh.dx.internal.cloudapp.net"
          },
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090"
          },
          "hostedWorkloads": [],
          "tapConfigurations": []
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-5b101b38e8e95f99805ac7ed8671bc4a-f6a1ec4ebca67a70-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6799ef49b5dd7a7df8a0201f6aff1dbd",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1794",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:47 GMT",
        "ETag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6c1d587c-5f1b-4d58-b544-226fc239ba13",
        "x-ms-client-request-id": "6799ef49b5dd7a7df8a0201f6aff1dbd",
        "x-ms-correlation-request-id": "793f8af2-c515-4b83-a841-2c1b1d719c3f",
        "x-ms-ratelimit-remaining-subscription-reads": "11346",
        "x-ms-request-id": "718c5e87-c24d-4574-b1c2-4d8d329d55fb",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151947Z:793f8af2-c515-4b83-a841-2c1b1d719c3f"
      },
      "ResponseBody": {
        "name": "azsmnet4717",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717",
        "etag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4f09682a-6114-4521-9268-253ec496c1d7",
          "ipConfigurations": [
            {
              "name": "azsmnet2660",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717/ipConfigurations/azsmnet2660",
              "etag": "W/\"4109ec01-7377-4ccc-8599-91eac7c889fe\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562/subnets/azsmnet5786"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "qpo4cufrsgxe5mdyrnzfuiivxh.dx.internal.cloudapp.net"
          },
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090"
          },
          "hostedWorkloads": [],
          "tapConfigurations": []
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-0c16e584a8262a2b7f1b7c52546ae91a-23d3651fc32b240a-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7979e6004a5e47f0609ba70e71b9fbd8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5729",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:47 GMT",
        "ETag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6e856a97-6e1b-4adf-9fea-e991190ab4d0",
        "x-ms-client-request-id": "7979e6004a5e47f0609ba70e71b9fbd8",
        "x-ms-correlation-request-id": "887c4717-480d-449f-a296-f2b62a925258",
        "x-ms-ratelimit-remaining-subscription-reads": "11345",
        "x-ms-request-id": "ab1c4b7f-4f89-489e-bfe8-7c3fa46e8352",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151948Z:887c4717-480d-449f-a296-f2b62a925258"
      },
      "ResponseBody": {
        "name": "azsmnet5090",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090",
        "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "1273c841-48b5-4243-90e5-6462f0bbdb0c",
          "securityRules": [
            {
              "name": "azsmnet1691",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/securityRules/azsmnet1691",
              "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"b4ccb8bb-feeb-4687-8995-af7ab9c3979b\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "networkInterfaces": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces/azsmnet4717?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-688a401e979eece010966aec48c11d82-e4a4378ab9bca7b2-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7d7d483d253f5b6869dc0da9b4ba23ce",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9f68fa7d-f5a8-4a26-a6f5-0f20ed86b529?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:19:51 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/9f68fa7d-f5a8-4a26-a6f5-0f20ed86b529?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "4",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "71cb8559-fa51-47f9-84d8-274db6cfe543",
        "x-ms-client-request-id": "7d7d483d253f5b6869dc0da9b4ba23ce",
        "x-ms-correlation-request-id": "2a0c472d-153c-4e82-963c-4610df1713b6",
        "x-ms-ratelimit-remaining-subscription-deletes": "14926",
        "x-ms-request-id": "9f68fa7d-f5a8-4a26-a6f5-0f20ed86b529",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151952Z:2a0c472d-153c-4e82-963c-4610df1713b6"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9f68fa7d-f5a8-4a26-a6f5-0f20ed86b529?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-688a401e979eece010966aec48c11d82-3689a618ba56baf5-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "22e148a4a082da7d7d1d10823d4793a5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:51 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "fffe9bd9-d3ff-44fe-9896-6bbfee032ac4",
        "x-ms-client-request-id": "22e148a4a082da7d7d1d10823d4793a5",
        "x-ms-correlation-request-id": "b80cb936-3253-44ef-ae42-e70f410a961d",
        "x-ms-ratelimit-remaining-subscription-reads": "11344",
        "x-ms-request-id": "64f4c395-9915-4337-b4ff-7f1710f65d29",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151952Z:b80cb936-3253-44ef-ae42-e70f410a961d"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkInterfaces?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-1eb876e50a3fca8a58efb7a2f20f800b-fc23ee317e675c7b-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "ea62d87700afb515d37e7fed1e264dfa",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "12",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:52 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "a88b3516-48d0-4026-ba68-d259828a9481",
        "x-ms-ratelimit-remaining-subscription-reads": "11343",
        "x-ms-request-id": "a88b3516-48d0-4026-ba68-d259828a9481",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151952Z:a88b3516-48d0-4026-ba68-d259828a9481"
      },
      "ResponseBody": {
        "value": []
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/networkSecurityGroups/azsmnet5090?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d83bb55d35f8ad33565eb5e73d3c0314-86fc8f252d35c94d-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6c05ced300d90c4c092f7da577f2c2b7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/3e18e661-fe71-49dc-b44c-b980ca07a16b?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:19:52 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/3e18e661-fe71-49dc-b44c-b980ca07a16b?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4862f821-81b7-4d07-980b-a529d0372abc",
        "x-ms-client-request-id": "6c05ced300d90c4c092f7da577f2c2b7",
        "x-ms-correlation-request-id": "a7d47ce6-768d-426f-8d1b-e2113c2faae8",
        "x-ms-ratelimit-remaining-subscription-deletes": "14925",
        "x-ms-request-id": "3e18e661-fe71-49dc-b44c-b980ca07a16b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151953Z:a7d47ce6-768d-426f-8d1b-e2113c2faae8"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/3e18e661-fe71-49dc-b44c-b980ca07a16b?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-d83bb55d35f8ad33565eb5e73d3c0314-b079acb61c9e4174-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6eae15d0264276cc8b56e07f82703de1",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "9ccc3f8b-dfa6-48ef-90ef-6f63c06e59c1",
        "x-ms-client-request-id": "6eae15d0264276cc8b56e07f82703de1",
        "x-ms-correlation-request-id": "a4811f20-b335-4b95-b98a-f4e099eefa43",
        "x-ms-ratelimit-remaining-subscription-reads": "11342",
        "x-ms-request-id": "021f6bc6-da24-4538-b3d5-cfa776f34c31",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151953Z:a4811f20-b335-4b95-b98a-f4e099eefa43"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg9007/providers/Microsoft.Network/virtualNetworks/azsmnet1562?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-61b35c50ee81a2f8d73e7c79aeb6db7e-4c2371548c217007-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bc2ec7bb175bb4ef3f6039adb249eb79",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/bc867391-8bf7-40e8-899c-4f824278ef1f?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:19:53 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/bc867391-8bf7-40e8-899c-4f824278ef1f?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4c26e8a0-8534-4122-bd56-e753a855cae2",
        "x-ms-client-request-id": "bc2ec7bb175bb4ef3f6039adb249eb79",
        "x-ms-correlation-request-id": "77ee03ac-febf-437a-b013-b0b9a7a388c9",
        "x-ms-ratelimit-remaining-subscription-deletes": "14924",
        "x-ms-request-id": "bc867391-8bf7-40e8-899c-4f824278ef1f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151954Z:77ee03ac-febf-437a-b013-b0b9a7a388c9"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/bc867391-8bf7-40e8-899c-4f824278ef1f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-61b35c50ee81a2f8d73e7c79aeb6db7e-ba66fc866babdb4d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "59476deeff60b8fc26fa2ee1ed1fc441",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:19:54 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a3e7c5dd-6392-4255-ae73-578c91bf69f2",
        "x-ms-client-request-id": "59476deeff60b8fc26fa2ee1ed1fc441",
        "x-ms-correlation-request-id": "0e9f326f-f3cf-4eb5-a550-972fb965a392",
        "x-ms-ratelimit-remaining-subscription-reads": "11341",
        "x-ms-request-id": "1353a1db-26aa-4b19-9016-abc42fb85544",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T151954Z:0e9f326f-f3cf-4eb5-a550-972fb965a392"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1705025691",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
